@startuml

abstract EdificioProtoss{
-escudo:Escudo
+construir(coordenada,inventario)
+ejecutarDanio(danio)
+regenerar()
+desenergizarTerrenos()
+volverNuevamenteOperativo()
+toData():ObjecNode
}





EdificioProtoss-> EstadoEdificio

interface Recurso
interface EstadoEdificio

EdificioProtoss -up-> Escudo

EdificioProtoss -up-> Nombre
EdificioProtoss -up-> Coordenada
EdificioProtoss -up-> Recurso
EdificioProtoss -left> Vida


class Acceso{
+Acceso()
+actualizarEdificio(inventario)
+extraerRecursos(inventario)
+ocupar(terreno)
}
class Asimilador{
+Asimilador()
+actualizarEdificio(inventario)
+generarUnidad(unidad,inventario)
+ocupar(terreno)
+volverEdificioInoperativo()
}

class NexoMineral{
+NexoMineral()
+actualizarEdificio(inventario)
+extraerRecursos(inventario)
+ocupar(terreno)
}

class Pilon{
+Pilon()
+actualizarEdificio(inventario)
+energizarTerrenos()
+desenergizarTerrenos()
+destruirse(inventario)
+ejecutarDanio(danio)
+agregarSuministro(inventario)
+restarSuministro(inventario)
+ocupar(terreno)
}

class PuertoEstelar{
+PuertoEstelar()
+actualizarEdificio(inventario)
+volverEdificioInoperativo()
+ocupar(terreno)
+generarUnidad(scout,inventario)
+validadCorrelativasDeConstruccion(inventario)
}

EdificioProtoss <|-- Pilon
EdificioProtoss <|--- PuertoEstelar
EdificioProtoss <|-- NexoMineral
EdificioProtoss <|-down-- Asimilador
EdificioProtoss <|---- Acceso

@enduml